# path-to-perdition

./: Cargo.toml
assets/shaders/: pbr.wgsl
crates/android/: Cargo.toml
crates/android/src/: lib.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: main.rs
crates/game/: Cargo.toml
crates/game/src/: app.rs  events.rs  lib.rs  state.rs  vertex.rs
crates/game/src/components/: asset.rs  camera.rs  mod.rs  model.rs
crates/game/src/resources/: context.rs  mod.rs  msaa.rs  pbr.rs  state.rs  surface.rs
crates/game/src/systems/: asset.rs  mod.rs  renderer.rs
crates/ptp/: Cargo.toml
crates/ptp/src/: state.rs
res/values/: colors.xml  themes.xml
src/: main.rs
