[package]
name = "ptp-android"
authors = ["Lars Jarlvik <lars.jarlvik@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.28", features = ["android-native-activity"]}
android_logger = "0.11.0"
log = "0.4"
pollster = "0.3"
ptp-game = { path = "../game" }

[lib]
name="ptp_android"
crate_type=["cdylib"]

[package.metadata.android.application]
label = "Path to Perdition"
icon = "@mipmap/ic_launcher"
theme = "@style/Theme.Default"
colorMode = "wideColorGamut"

[package.metadata.android]
resources = "../../res"
assets = "../../assets"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.sdk]
min_sdk_version = 17
target_sdk_version = 34